# computational-methods-hw2

./: .gitignore  CMakeLists.txt  linear_solvers.py  pom.xml  relax.in  relaxation_method.cpp
headers/: gauss_solver.h  gradient_descent_solver.h  jacobi_solver.h  matrix.h
src/: main.cpp
src/main/java/ru/ifmo/ctddev/segal/hw2/: GaussSolver.java  IterativeSolver.java  Main.java  SystemSolver.java
src/main/kotlin/ru/ifmo/ctddev/segal/hw2/: GaussSolver.kt  IterativeStopPredicate.kt
src/main/kotlin/ru/ifmo/ctddev/segal/hw2/util/: RichBigRational.kt  RichDouble.kt  RichNumber.kt
src/main/scala/ru/ifmo/ctddev/segal/hw2/: IterativeStopPredicate.scala  Main.scala
src/main/scala/ru/ifmo/ctddev/segal/hw2/matrix/: Matrix.scala
src/test/kotlin/ru/ifmo/ctddev/segal/hw2/: GaussSolverTest.kt
